@@ -1,3 +1,8 @@
+2011-09-27  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
+	    Ozkan Sezer  <sezeroz@gmail.com>
+
+	* uchar.h: New header, initial implementation of uchar.h.
+
 2011-09-26  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* errno.h (EOVERFLOW): Remove.
